tests/defer_yield/error.txt
Validation error: ./tests/defer_yield/defer_yield.fae:3
 Deferring a lone yield statement is disallowed
  3|         defer yield false
             ^^^^^^^^^^^^^^^^^
